Wed Nov 28 07:33:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Any.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Impl_T.cpp:
        * tao/AnyTypeCode/Any_Special_Impl_T.cpp:
        * tao/AnyTypeCode/Objref_TypeCode.h:
          Layout changes

        * tests/Bug_2936_Regression/bug2936.cpp:
          Fixed compile problems

Tue Nov 27 21:50:14 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/loader_const.idl:
        * tests/IDL_Test/PEMNaming.idl:
        * TAO_IDL/ast/ast_module.cpp:
          Fixed fuzz errors.

Tue Nov 27 12:43:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.mpc:
          Install fixes for install data

Tue Nov 27 11:52:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Trading_Service/Trading_Service.mpc:
          Install fixes for install data

Tue Nov 27 11:24:11 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Naming_Service/Naming_Service.mpc:
        * orbsvcs/Notify_Service/Notify_Service.mpc:
          Install fixes for install data

Tue Nov 27 10:27:01 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/catior/catior.mpc:
        * utils/nslist/nslist.mpc:
          Install fixes

Tue Nov 27 09:54:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:
          Set gendir tao-imr for docu files

Mon Nov 26 11:50:40 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:
          Added install back for imr

Sat Nov 24 10:02:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:
          No need to set explicit install

Sat Nov 24 09:17:21 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
